--- a/src/about.html
+++ b/src/about.html
@@ -21,21 +21,8 @@
     </div>
     <div class="container">
         <h1>Feladat 0303</h1>
-        
-        <label for="diameter" class="form-label">Átmérő</label>
-        
-        <input id="diameter" type="text" 
-        class="form-control"><br>
-
-        <button type="button" id="calcButton"
-        class="btn btn-primary">Számol</button>
-        <br>
-        <label for="result" class="form-label">A terület fele</label>
-        <input type="text" id="result" disabled 
-        class="form-control">
-
-
-    </div>
-    <script src="app.js"></script>
+        <p>
+            Sallai András, Nagy János, 2021-10-14
+        </p>        
 </body>
 </html>
