--- a/src/github.html
+++ b/src/github.html
@@ -21,21 +21,12 @@
     </div>
     <div class="container">
         <h1>Feladat 0303</h1>
+        <h2>GitHub</h2>  
+        <p>
+            <a href="https://github.com/andteki">
+                https://github.com/andteki
+            </a>
+        </p>
         
-        <label for="diameter" class="form-label">Átmérő</label>
-        
-        <input id="diameter" type="text" 
-        class="form-control"><br>
-
-        <button type="button" id="calcButton"
-        class="btn btn-primary">Számol</button>
-        <br>
-        <label for="result" class="form-label">A terület fele</label>
-        <input type="text" id="result" disabled 
-        class="form-control">
-
-
-    </div>
-    <script src="app.js"></script>
 </body>
 </html>
